# cql

./: .configure.ac.swp  .gitignore  AUTHORS  README  configure.ac
src/: .Makefile.am.swp  Makefile.am  main.c
src/.deps/: cql-cql.Po  cql-main.Po  cql-util.Po  cqltest-cql.Po  cqltest-main.Po  cqltest-util.Po
